# celery

./: Makefile  README.md  db.sqlite3  pyproject.toml
backend/: celery.py  settings.py  urls.py
core/: admin.py  models.py  task.py  urls.py  views.py
